Pay slip pdf generator and preview page

--- a/easyPay/Views/Employee/Delete.cshtml
+++ b/easyPay/Views/Employee/Delete.cshtml
@@ -1,4 +1,6 @@
-﻿@model EmployeeDeleteViewModel
+﻿@model easyPay.Models.EmployeeDeleteViewModel
+
+@{ ViewBag.Title = "Delete Employee";}
 
 <div class="col-md-12 grid-margin stretch-card">
     <div class="card">
