--- a/easyPay/Views/Employee/Detail.cshtml
+++ b/easyPay/Views/Employee/Detail.cshtml
@@ -1,4 +1,6 @@
-﻿@model EmployeeDetailViewModel
+﻿@model easyPay.Models.EmployeeDetailViewModel
+
+@{ ViewBag.Title = "Employee Detail";}
 
 <div class="col-md-12 grid-margin grind-margin-md-0">
     <div class="card">
