--- a/easyPay/Views/Employee/Edit.cshtml
+++ b/easyPay/Views/Employee/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@model EmployeeEditViewModel
+﻿@model easyPay.Models.EmployeeEditViewModel
+
+@{ ViewBag.Title = "Edit Employee";}
 
 <div class="col-md-12 grid-margin stretch-card">
     <div class="card">
