--- a/easyPay/Views/Employee/Create.cshtml
+++ b/easyPay/Views/Employee/Create.cshtml
@@ -1,5 +1,7 @@
 ﻿@model EmployeeCreateViewModel
 
+@{ViewBag.Title = "Create Employee";}
+
 
 <div class="col-md-12 grid-margin stretch-card">
     <div class="card">
