--- a/easyPay/Views/Employee/Index.cshtml
+++ b/easyPay/Views/Employee/Index.cshtml
@@ -1,68 +1,82 @@
-﻿@model IEnumerable<EmployeeIndexViewModel>
+﻿@model EmployeeListPagination<EmployeeIndexViewModel>
 
 @{ ViewBag.Title = "Employee";}
 
 <div class="row">
-        <div class="col-md-12 grid-margin">
-            <div class="card">
-                <div class="card-body">
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb">
-                            <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Employee List</li>
-                        </ol>
-                    </nav><br/><br/>
-                    <div class="row">
-                        <div class="col-md-12 table-responsive-md">
-                            <a class="btn btn-xs btn-outline-success float-md-right" asp-action="Create">Create New Employee</a>
-                            <table class="table table-striped">
-                                <thead>
+    <div class="col-md-12 grid-margin">
+        <div class="card">
+            <div class="card-body">
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Employee List</li>
+                    </ol>
+                </nav><br /><br />
+                <div class="row">
+                    <div class="col-md-12 table-responsive-md">
+                        <a class="btn btn-xs btn-outline-success float-md-right" asp-action="Create">Create New Employee</a>
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Employee No.</th>
+                                    <th>Photo</th>
+                                    <th>Name</th>
+                                    <th>Gender</th>
+                                    <th>Designation</th>
+                                    <th>City</th>
+                                    <th>Start Date</th>
+                                    <th class="text-warning">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
                                     <tr>
-                                        <th>Employee No.</th>
-                                        <th>Photo</th>
-                                        <th>Name</th>
-                                        <th>Gender</th>
-                                        <th>Designation</th>
-                                        <th>City</th>
-                                        <th>Start Date</th>
-                                        <th class="text-warning">Action</th>
+                                        <td>
+                                            <a asp-action="Detail" asp-route-id="@item.Id">
+                                                @item.EmployeeNo
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <img alt="image" src="@Url.Content(item.ImageUrl)" />
+                                        </td>
+                                        <td>@item.FullName</td>
+                                        <td>@item.Gender</td>
+                                        <td>@item.Designation</td>
+                                        <td>@item.City</td>
+                                        <td>@item.DateJoined.ToString("dd/MM/yyyy")</td>
+                                        <td>
+                                            <a class="text-primary" asp-action="Edit" asp-route-id="@item.Id">
+                                                <i class="fas fa-edit"></i>Edit
+                                            </a>
+                                            <a class="text-success" asp-action="Detail" asp-route-id="@item.Id">
+                                                <i class="fas fa-info-circle"></i>Detail
+                                            </a>
+                                            <a class="text-danger" asp-action="Delete" asp-route-id="@item.Id">
+                                                <i class="fas fa-trash-alt"></i>Delete
+                                            </a>
+                                        </td>
                                     </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var item in Model)
-                                    {
-                                        <tr>
-                                            <td>
-                                                <a asp-action="Detail" asp-route-id="@item.Id">
-                                                    @item.EmployeeNo
-                                                </a>
-                                            </td>
-                                            <td>
-                                                <img alt="image" src="@Url.Content(item.ImageUrl)" />
-                                            </td>
-                                            <td>@item.FullName</td>
-                                            <td>@item.Gender</td>
-                                            <td>@item.Designation</td>
-                                            <td>@item.City</td>
-                                            <td>@item.DateJoined.ToString("dd/MM/yyyy")</td>
-                                            <td>
-                                                <a class="text-primary" asp-action="Edit" asp-route-id="@item.Id">
-                                                    <i class="fas fa-edit"></i>Edit
-                                                </a>
-                                                <a class="text-success" asp-action="Detail" asp-route-id="@item.Id">
-                                                    <i class="fas fa-info-circle"></i>Detail
-                                                </a>
-                                                <a class="text-danger" asp-action="Delete" asp-route-id="@item.Id">
-                                                    <i class="fas fa-trash-alt"></i>Delete
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
+                                }
+                            </tbody>
+                        </table>
+                        @{
+                            var disablePrevious = !Model.IsPreviousPageAvailable ? "disabled" : "";
+                            var disableNext = !Model.IsNextPageAvailable ? "disabled" : "";
+                        }
+                        <div style="text-align: center">
+                            <a asp-action="Index"
+                               asp-route-pageNumber="@(Model.PageIndex - 1)" class="btn btn-success @disablePrevious">
+                                Previous
+                            </a>
+                            <a asp-action="Index"
+                               asp-route-pageNumber="@(Model.PageIndex + 1)" class="btn btn-success @disableNext">
+                                Next
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 </div>
