--- a/easyPay/Views/Shared/_Layout.cshtml
+++ b/easyPay/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
     <div class="container-scroller">
         <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
             <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-                <a class="navbar-brand brand-logo-logo">
+                <a class="navbar-brand brand-logo-logo" asp-action="index">
                     <img src="~/images/easyPay.jpg" alt="logo"/>
                 </a>
             </div>
