--- a/easyPay/Views/Home/Index.cshtml
+++ b/easyPay/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to easyPay! Testing Finalized</h1>
+    <h1 class="display-4">Welcome to easyPay! Staging Idea Change</h1>
 </div>
